Change buckets ID type to UUID
